advanced/mcgw/manifests/public-store-route-canary.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-store-route
  namespace: store
  labels:
    gateway: external-http
spec:
  hostnames:
  - 34-160-250-20.nip.io
  parentRefs:
  - name: external-http
  rules:
  - backendRefs:
    # 90% of traffic to store-tokyo ServiceImport
    - name: store-tokyo
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 90
    # 10% of traffic to store-osaka ServiceImport
    - name: store-osaka
      group: net.gke.io
      kind: ServiceImport
      port: 8080
      weight: 10
